# OOP_6Laba

./: CMakeLists.txt
include/: concept.hpp  coords.hpp  fight_manager.hpp  npc.hpp  observer.hpp  visitor.hpp
src/: main.cpp
tests/: test.cpp
